2015-02-03  Michael Guravage  <guravage@weddell.itf.cwi.nl>
	* index.html: Added CWI logo to footer.

	* style.css: Regenerate css with lessc.

	* style.less (.LSBox): Reposition Live Search and Live Search Result Boxes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2015-02-03  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
+	* index.html: Added CWI logo to footer.
+
 	* style.css: Regenerate css with lessc.
 
 	* style.less (.LSBox): Reposition Live Search and Live Search Result Boxes.
